# hack_AI

./: 2.xlsx  output.xlsx
backend/: pyproject.toml
backend/src/: 2021_Minus_Musor.py  BaseLine.ipynb  Finder.py  Rating.py  datawork.py  db.py  geocoding.py  get_coords.py  main.py  output_full_full.csv
frontend/: .eslintignore  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: map.vue
